package com.bloomtech.asylumrgbea.models;

import lombok.Data;

@Data
public class ErrorDto {

    private final String message;
}
